--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;1,200;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos.css">
-    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684103633/bohn%20clinica%20estetica/sinfondo-4-01-01_eel8pi.png">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684103633/bohn%20clinica%20estetica1/sinfondo-4-01-01_eel8pi.png">
     <title>Bohn Clinica Estética</title>
 </head>
 <body>
     <!-- HEADER -->
     <section class="header">
         <div class="content-section">
-            <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684096109/bohn%20clinica%20estetica/sinfondo-4-01_r7cpqc.png" alt="logo"></a>
+            <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684096109/bohn%20clinica%20estetica1/sinfondo-4-01_r7cpqc.png" alt="logo"></a>
         </div>
     </section>
     <!-- Info -->
@@ -32,79 +32,79 @@
     <section class="treatments">
         <div class="content-section">
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684124086/bohn%20clinica%20estetica/Anticelulitico_cyber_dcg4ld.png" alt="Anticelulitico">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321920/bohn%20clinica%20estetica1/Precio_Normal_219.000_Precio_CYBER_153.000_uoyrxt.png" alt="Anticelulitico">
                 <div class="treatment-buttons">
                   <a href=" https://www.webpay.cl/form-pay/96345" target="_blank">Comprar (incluye 8 sesiones)</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684120785/bohn%20clinica%20estetica/depilacion_laser_base_cyber_iohnts.png" alt="Depilacion Laser">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321920/bohn%20clinica%20estetica1/Precio_Normal_190.000_Precio_CYBER_123.000_yloeac.png" alt="Depilacion Laser">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96347" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684124086/bohn%20clinica%20estetica/depilacion_laser_plus_cyber_im8arh.png" alt="Depilacion Laser Pack Plus">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321918/bohn%20clinica%20estetica1/CYBER_2023_dep_laser_pck_plus_nqaajo.png" alt="Depilacion Laser Pack Plus">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96348" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684124086/bohn%20clinica%20estetica/grasa_localizada_cyber_zqcmuc.png" alt="Grasa Localizada">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321918/bohn%20clinica%20estetica1/CYBER_2023_grasa_localizada_z228b4.png" alt="Grasa Localizada">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96349" target="_blank">Comprar (incluye 8 sesiones)</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684124086/bohn%20clinica%20estetica/hifu_7d_1_zona_rostro_cyber_lsjwmy.png" alt="Hifu Facial">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321918/bohn%20clinica%20estetica1/hifu_7d_facial_stawhx.png" alt="Hifu Facial">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96356" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684120784/bohn%20clinica%20estetica/hifu_corporal_cyber_laon3k.png" alt="Hifu Corporal">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321918/bohn%20clinica%20estetica1/CYBER_DEFINITIVO_HIFU_CORPORAL_omgbiz.png" alt="Hifu Corporal">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96358" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684120784/bohn%20clinica%20estetica/Hifu_facial_rostro_completo_cyber_p6cdtj.png" alt="Hifu Facial Completo">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321918/bohn%20clinica%20estetica1/CYBER_DEFINITIVO_HIFU_FACIAL_xrfk4c.png" alt="Hifu Facial Completo">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96360" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684120784/bohn%20clinica%20estetica/limpieza_facial_cyber_nfpa1x.png" alt="Limpieza Facial Profunda">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321918/bohn%20clinica%20estetica1/limpieza_facial_cyber_mjazz7.png" alt="Limpieza Facial Profunda">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96362" target="_blank">Comprar (incluye 1 sesión)</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684120784/bohn%20clinica%20estetica/mesoterapia_cyber_xqzntg.png" alt="Mesoterapia Capilar">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321920/bohn%20clinica%20estetica1/Precio_Normal_375.000_Precio_CYBER_225.000_vwnrks.png" alt="Mesoterapia Capilar">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96363" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684120784/bohn%20clinica%20estetica/microneedling_cyber_uto8im.png" alt="Microneedling">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321920/bohn%20clinica%20estetica1/Precio_Normal_299.000_Precio_CYBER_179.000_rhhjgk.png" alt="Microneedling">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96365" target="_blank">Comprar (incluye 4 sesiones)</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684120784/bohn%20clinica%20estetica/peeling_hollywood_cyber_nebztz.png" alt="Hollywood Peeling">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321919/bohn%20clinica%20estetica1/peeling_dlh5kt.png" alt="Hollywood Peeling">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96368" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684120785/bohn%20clinica%20estetica/peeling_quimico_despigmentante_cyber_mkfies.png" alt="Peeling Quimico">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321920/bohn%20clinica%20estetica1/peeling_quimico_despigmentante_cyber_dsoguw.png" alt="Peeling Quimico">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96369" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684120785/bohn%20clinica%20estetica/post_parto_cyber_uu2iob.png" alt="Post Parto">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321919/bohn%20clinica%20estetica1/post_parto_cyber_exaymu.png" alt="Post Parto">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96370" target="_blank">Comprar (incluye 8 sesiones)</a>
                 </div>
