new flyers-new prices

--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -26,91 +26,108 @@
                 NUESTRAS PROMOCIONES
             </span>
         </div>
-
     </section>
     <!-- TREATMETS -->
     <section class="treatments">
         <div class="content-section">
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321920/bohn%20clinica%20estetica1/Precio_Normal_219.000_Precio_CYBER_153.000_uoyrxt.png" alt="Anticelulitico">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331994/bohn%20clinica%20estetica1/anticelulitico_lwlfvn.png" alt="Anticelulitico">
                 <div class="treatment-buttons">
-                  <a href=" https://www.webpay.cl/form-pay/96345" target="_blank">Comprar (incluye 8 sesiones)</a>
+                  <a href="https://www.webpay.cl/form-pay/96345" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321920/bohn%20clinica%20estetica1/Precio_Normal_190.000_Precio_CYBER_123.000_yloeac.png" alt="Depilacion Laser">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331994/bohn%20clinica%20estetica1/depi_laser_pack_base_daz34z.png" alt="Depilacion Laser Pack Base">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96347" target="_blank">Comprar</a>
+                  <a href="https://www.webpay.cl/form-pay/95587 " target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321918/bohn%20clinica%20estetica1/CYBER_2023_dep_laser_pck_plus_nqaajo.png" alt="Depilacion Laser Pack Plus">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331994/bohn%20clinica%20estetica1/depi_laser_pack_plus_wxkybn.png" alt="Depilacion Laser Pack Plus">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96348" target="_blank">Comprar</a>
+                  <a href="https://www.webpay.cl/form-pay/105030" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321918/bohn%20clinica%20estetica1/CYBER_2023_grasa_localizada_z228b4.png" alt="Grasa Localizada">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331993/bohn%20clinica%20estetica1/grasa_localizada_rqtg5l.png" alt="Grasa Localizada">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96349" target="_blank">Comprar (incluye 8 sesiones)</a>
+                  <a href="https://www.webpay.cl/form-pay/96349" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321918/bohn%20clinica%20estetica1/hifu_7d_facial_stawhx.png" alt="Hifu Facial">
-                <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96356" target="_blank">Comprar</a>
-                </div>
-            </div>
-            <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321918/bohn%20clinica%20estetica1/CYBER_DEFINITIVO_HIFU_CORPORAL_omgbiz.png" alt="Hifu Corporal">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331993/bohn%20clinica%20estetica1/hifu_corporal_ewa7ja.png" alt="Hifu Corporal">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96358" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321918/bohn%20clinica%20estetica1/CYBER_DEFINITIVO_HIFU_FACIAL_xrfk4c.png" alt="Hifu Facial Completo">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331993/bohn%20clinica%20estetica1/hifu_facial_completo_iwz575.png" alt="Hifu Facial Completo">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96360" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321918/bohn%20clinica%20estetica1/limpieza_facial_cyber_mjazz7.png" alt="Limpieza Facial Profunda">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331993/bohn%20clinica%20estetica1/limpieza_profunda_qkrctp.png" alt="Limpieza Facial Profunda">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96362" target="_blank">Comprar (incluye 1 sesión)</a>
+                  <a href="https://www.webpay.cl/form-pay/96362" target="_blank">Comprar (1 sesión)</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321920/bohn%20clinica%20estetica1/Precio_Normal_375.000_Precio_CYBER_225.000_vwnrks.png" alt="Mesoterapia Capilar">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331995/bohn%20clinica%20estetica1/microneeding_cvdarb.png" alt="Microneedling">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96363" target="_blank">Comprar</a>
+                  <a href="https://www.webpay.cl/form-pay/96365" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321920/bohn%20clinica%20estetica1/Precio_Normal_299.000_Precio_CYBER_179.000_rhhjgk.png" alt="Microneedling">
-                <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96365" target="_blank">Comprar (incluye 4 sesiones)</a>
-                </div>
-            </div>
-            <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321919/bohn%20clinica%20estetica1/peeling_dlh5kt.png" alt="Hollywood Peeling">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331993/bohn%20clinica%20estetica1/hollywood_peeling_po7rpa.png" alt="Hollywood Peeling">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96368" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321920/bohn%20clinica%20estetica1/peeling_quimico_despigmentante_cyber_dsoguw.png" alt="Peeling Quimico">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331994/bohn%20clinica%20estetica1/peeling_quimico_despigm_wwhwd4.png" alt="Peeling Quimico">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96369" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1685321919/bohn%20clinica%20estetica1/post_parto_cyber_exaymu.png" alt="Post Parto">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331995/bohn%20clinica%20estetica1/post_parto_qyepqz.png" alt="Post Parto">
                 <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96370" target="_blank">Comprar (incluye 8 sesiones)</a>
+                  <a href="https://www.webpay.cl/form-pay/96370" target="_blank">Comprar</a>
+                </div>
+            </div>
+            <div class="treatment-item">
+                <div>
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331995/bohn%20clinica%20estetica1/nutri_slydlj.png" alt="Nutricion">
+                </div>
+                <div class="treatment-buttons-two">
+                  <a href="https://www.webpay.cl/form-pay/105035" target="_blank">Comprar Consulta de Control</a>
+                </div>
+                <div class="treatment-buttons"> 
+                  <a href="https://www.webpay.cl/form-pay/105033" target="_blank">Comprar Primera Consulta</a> 
+                </div>
+            </div>
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331994/bohn%20clinica%20estetica1/masajes_descontracturantes_whosmc.png" alt="Masajes Descontracturantes">
+                <div class="treatment-buttons-two">
+                  <a href="https://www.webpay.cl/form-pay/94143" target="_blank">Comprar Pack 2 Sesiones</a>
+                </div>
+                <div class="treatment-buttons"> 
+                  <a href="https://www.webpay.cl/form-pay/94139" target="_blank">Comprar 1 sesión</a>
+                </div>
+            </div>
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331993/bohn%20clinica%20estetica1/masaje_relajante_yedklb.png">
+                <div class="treatment-buttons-two">
+                  <a href="https://www.webpay.cl/form-pay/94141" target="_blank">Comprar Pack 2 Sesiones</a>
+                </div>
+                <div class="treatment-buttons">
+                  <a href="https://www.webpay.cl/form-pay/94137" target="_blank">Comprar 1 sesión</a> 
                 </div>
             </div>
         </div>
     </section>
+
     <!-- FOOTER -->
     <section class="contact-information" id="contact-information">
         <div class="content-section">
