--- a/bohn html-css/index.html
+++ b/bohn html-css/index.html
@@ -12,93 +12,143 @@
     <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684103633/bohn%20clinica%20estetica1/sinfondo-4-01-01_eel8pi.png">
     <title>Bohn Clinica Estética</title>
 </head>
-<body>
+<body style="background-color: #EFEEEE;">
     <!-- HEADER -->
     <section class="header">
         <div class="content-section">
-            <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1684096109/bohn%20clinica%20estetica1/sinfondo-4-01_r7cpqc.png" alt="logo"></a>
+            <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689716072/bohn%20clinica%20estetica1/sinfondo-3-01_woo4er.png" alt="logo"></a>
         </div>
     </section>
-    <!-- Info -->
-    <section class="promos">
-        <div class="content-section">
-            <span>
-                NUESTRAS PROMOCIONES
-            </span>
-        </div>
-    </section>
+    <!-- navbar -->
+    <!-- <section class="nav">
+        <nav>
+
+        </nav>
+    </section> -->
+
     <!-- TREATMETS -->
     <section class="treatments">
-        <div class="content-section">
+        <!-- titulo -->
+
+        <!-- <div class="title">
+            <span>
+               PROMOS Y NOVEDADES
+            </span>
+        </div> -->
+        <!-- novedades -->
+        <!-- <div class="content-section">   
+        </div> -->
+
+        <!-- titulo -->
+        <div class="title">
+            <span>
+               TRATAMIENTOS CORPORALES
+            </span>
+        </div>
+        <!-- tratamientos corporales -->
+        <div class="content-section"> 
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331994/bohn%20clinica%20estetica1/anticelulitico_lwlfvn.png" alt="Anticelulitico">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726625/bohn%20clinica%20estetica1/imgs%20webp/anticelulitico-webp_cssv1k.webp" alt="Anticelulitico">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96345" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331994/bohn%20clinica%20estetica1/depi_laser_pack_base_daz34z.png" alt="Depilacion Laser Pack Base">
-                <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/95587 " target="_blank">Comprar</a>
-                </div>
-            </div>
-            <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331994/bohn%20clinica%20estetica1/depi_laser_pack_plus_wxkybn.png" alt="Depilacion Laser Pack Plus">
-                <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/105030" target="_blank">Comprar</a>
-                </div>
-            </div>
-            <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331993/bohn%20clinica%20estetica1/grasa_localizada_rqtg5l.png" alt="Grasa Localizada">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726625/bohn%20clinica%20estetica1/imgs%20webp/grasa-localizada-webp_hi9t9l.webp" alt="Grasa Localizada">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96349" target="_blank">Comprar</a>
                 </div>
-            </div>
+            </div>          
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331993/bohn%20clinica%20estetica1/hifu_corporal_ewa7ja.png" alt="Hifu Corporal">
-                <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96358" target="_blank">Comprar</a>
-                </div>
-            </div>
-            <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331993/bohn%20clinica%20estetica1/hifu_facial_completo_iwz575.png" alt="Hifu Facial Completo">
-                <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96360" target="_blank">Comprar</a>
-                </div>
-            </div>
-            <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331993/bohn%20clinica%20estetica1/limpieza_profunda_qkrctp.png" alt="Limpieza Facial Profunda">
-                <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96362" target="_blank">Comprar (1 sesión)</a>
-                </div>
-            </div>
-            <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331995/bohn%20clinica%20estetica1/microneeding_cvdarb.png" alt="Microneedling">
-                <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96365" target="_blank">Comprar</a>
-                </div>
-            </div>
-            <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331993/bohn%20clinica%20estetica1/hollywood_peeling_po7rpa.png" alt="Hollywood Peeling">
-                <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96368" target="_blank">Comprar</a>
-                </div>
-            </div>
-            <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331994/bohn%20clinica%20estetica1/peeling_quimico_despigm_wwhwd4.png" alt="Peeling Quimico">
-                <div class="treatment-buttons">
-                  <a href="https://www.webpay.cl/form-pay/96369" target="_blank">Comprar</a>
-                </div>
-            </div>
-            <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331995/bohn%20clinica%20estetica1/post_parto_qyepqz.png" alt="Post Parto">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726626/bohn%20clinica%20estetica1/imgs%20webp/post_parto_webp_dixgx2.webp" alt="Post Parto">
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/96370" target="_blank">Comprar</a>
                 </div>
             </div>
             <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726626/bohn%20clinica%20estetica1/imgs%20webp/hifu-corporal-webp_ogjika.webp" alt="Hifu Corporal">
+                <div class="treatment-buttons">
+                  <a href="https://www.webpay.cl/form-pay/96358" target="_blank">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <!-- titulo -->
+        <div class="title">
+            <span>
+               TRATAMIENTOS FACIALES
+            </span>
+        </div>
+        <!-- facial -->
+        <div class="content-section"> 
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726625/bohn%20clinica%20estetica1/imgs%20webp/rejuvenecimiento-facial_szdb9d.webp" alt="Rejuvenecimiento Facial">
+                <div class="treatment-buttons">
+                  <a href="https://wa.me/56932066518" target="_blank">Comprar</a>
+                </div>
+            </div>
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726625/bohn%20clinica%20estetica1/imgs%20webp/hifu-facial-completo-webp_vskjad.webp" alt="Hifu Facial Completo">
+                <div class="treatment-buttons">
+                  <a href="https://www.webpay.cl/form-pay/96360" target="_blank">Comprar</a>
+                </div>
+            </div>
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726625/bohn%20clinica%20estetica1/imgs%20webp/limpieza-profunda-webp_uvjx0s.webp" alt="Limpieza Facial Profunda">
+                <div class="treatment-buttons">
+                  <a href="https://www.webpay.cl/form-pay/96362" target="_blank">Comprar (1 sesión)</a>
+                </div>
+            </div>
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726622/bohn%20clinica%20estetica1/imgs%20webp/microneeding_webp_ywktcj.webp" alt="Microneedling">
+                <div class="treatment-buttons">
+                  <a href="https://www.webpay.cl/form-pay/96365" target="_blank">Comprar</a>
+                </div>
+            </div>
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726625/bohn%20clinica%20estetica1/imgs%20webp/hollywood-peeling-webp_ipridr.webp" alt="Hollywood Peeling">
+                <div class="treatment-buttons">
+                  <a href="https://www.webpay.cl/form-pay/96368" target="_blank">Comprar</a>
+                </div>
+            </div>
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726623/bohn%20clinica%20estetica1/imgs%20webp/peeling_quimico_despigm_webp_nezrwa.webp" alt="Peeling Quimico">
+                <div class="treatment-buttons">
+                  <a href="https://www.webpay.cl/form-pay/96369" target="_blank">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <!-- titulo -->
+        <div class="title">
+            <span>
+               DEPILACIÓN
+            </span>
+        </div>
+            <!-- depilacion -->
+        <div class="content-section"> 
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1688259686/bohn%20clinica%20estetica1/imgs%20webp/depi-laser-pack-base_webp_anibc0.webp" alt="Depilacion Laser Pack Base">
+                <div class="treatment-buttons">
+                    <a href="https://www.webpay.cl/form-pay/95587 " target="_blank">Comprar</a>
+                </div>
+            </div>
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726626/bohn%20clinica%20estetica1/imgs%20webp/depi-laser-pack-plus-webp_s9vl0c.webp" alt="Depilacion Laser Pack Plus">
+                <div class="treatment-buttons">
+                    <a href="https://www.webpay.cl/form-pay/105030" target="_blank">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <!-- titulo -->
+        <div class="title">
+            <span>
+               NUTRICIÓN
+            </span>
+        </div>
+        <!-- Nutricion -->
+        <div class="content-section"> 
+            <div class="treatment-item">
                 <div>
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331995/bohn%20clinica%20estetica1/nutri_slydlj.png" alt="Nutricion">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726622/bohn%20clinica%20estetica1/imgs%20webp/nutri_webp_ydz7fx.webp" alt="Nutricion">
                 </div>
                 <div class="treatment-buttons-two">
                   <a href="https://www.webpay.cl/form-pay/105035" target="_blank">Comprar Consulta de Control</a>
@@ -107,8 +157,17 @@
                   <a href="https://www.webpay.cl/form-pay/105033" target="_blank">Comprar Primera Consulta</a> 
                 </div>
             </div>
+        </div>
+        <!-- titulo -->
+        <div class="title">
+            <span>
+               SPA & MASAJES
+            </span>
+        </div>
+            <!-- masajes -->
+        <div class="content-section"> 
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331994/bohn%20clinica%20estetica1/masajes_descontracturantes_whosmc.png" alt="Masajes Descontracturantes">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726622/bohn%20clinica%20estetica1/imgs%20webp/masajes_descontracturantes_webp_lrwnsi.webp" alt="Masajes Descontracturantes">
                 <div class="treatment-buttons-two">
                   <a href="https://www.webpay.cl/form-pay/94143" target="_blank">Comprar Pack 2 Sesiones</a>
                 </div>
@@ -117,12 +176,83 @@
                 </div>
             </div>
             <div class="treatment-item">
-                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1686331993/bohn%20clinica%20estetica1/masaje_relajante_yedklb.png">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726627/bohn%20clinica%20estetica1/imgs%20webp/masaje_relajante_webp_rbrdei.webp" alt="Masajes Relajantes">
                 <div class="treatment-buttons-two">
                   <a href="https://www.webpay.cl/form-pay/94141" target="_blank">Comprar Pack 2 Sesiones</a>
                 </div>
                 <div class="treatment-buttons">
                   <a href="https://www.webpay.cl/form-pay/94137" target="_blank">Comprar 1 sesión</a> 
+                </div>
+            </div>
+        </div>
+        <!-- titulo -->
+        <div class="title">
+            <span>
+               NOVIAS
+            </span>
+        </div>
+        <!-- novias -->
+        <div class="content-section">
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726626/bohn%20clinica%20estetica1/imgs%20webp/depi-laser-pack-base_webp_e9t9p2.webp" alt="Pack Novia Base">
+                <div class="treatment-buttons">
+                  <a href="https://www.webpay.cl/form-pay/106552" target="_blank">Comprar</a>
+                </div>
+            </div>
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726626/bohn%20clinica%20estetica1/imgs%20webp/pack-novias-plus_webp_b5aaol.webp" alt="Pack Novia Plus">
+                <div class="treatment-buttons">
+                  <a href="https://www.webpay.cl/form-pay/106553" target="_blank">Comprar</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- titulo -->
+        <div class="title">
+            <span>
+               GIFT CARDS
+            </span>
+        </div>
+        <!-- gift cards -->
+        <div class="content-section">
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726623/bohn%20clinica%20estetica1/imgs%20webp/Eclips_Bohn-Opci%C3%B3n-1_hmkbjs.webp" alt="Gift Card 51000">
+                <div class="treatment-buttons">
+                  <a href="https://wa.me/56932066518" target="_blank">Comprar Gift Card $51.000</a>
+                </div>
+            </div>
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726623/bohn%20clinica%20estetica1/imgs%20webp/Eclips_Bohn-Opci%C3%B3n-2_ykjjor.webp" alt="Gift Card 61000">
+                <div class="treatment-buttons">
+                  <a href="https://wa.me/56932066518" target="_blank">Comprar Gift Card $56.000</a>
+                </div>
+            </div>
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726624/bohn%20clinica%20estetica1/imgs%20webp/Eclips_Bohn-Opci%C3%B3n-3_tjxrco.webp" alt="Gift Card 61000">
+                <div class="treatment-buttons">
+                  <a href="https://wa.me/56932066518" target="_blank">Comprar Gift Card $61.000</a>
+                </div>
+            </div>
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689726626/bohn%20clinica%20estetica1/imgs%20webp/gift-card-50-000_webp_do9aye.webp" alt="Gift Card 50000">
+                <div class="treatment-buttons">
+                  <a href="https://www.webpay.cl/form-pay/106568" target="_blank">Comprar Gift Card $30.000 (canjeable por una limpieza facial profunda o una sesión de masajes relajantes/descontracturantes o $50.000 de bono para otros tratamientos) </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- titulo -->
+        <div class="title">
+            <span>
+               REFERIDOS
+            </span>
+        </div>
+        <!-- referidos -->
+        <div class="content-section">
+            <div class="treatment-item">
+                <img src="https://res.cloudinary.com/dsbekpj9h/image/upload/v1689716106/bohn%20clinica%20estetica1/imgs%20webp/REFERIDOS_k92ewz.webp" alt="Referidos">
+                <div class="treatment-buttons">
+                  <a href="https://wa.me/56932066518" target="_blank">Comprar</a>
                 </div>
             </div>
         </div>
@@ -148,23 +278,23 @@
                 </div>
                 <div class="col">
                     <h2>
-                        <i class="fa-solid fa-globe"></i> <a href="https://www.bohnestetica.cl/" target="_blank" style="text-decoration: none; color: inherit;">Página Web</a> 
+                        <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/bohn_clinicaestetica/" target="_blank" style="text-decoration: none; color: inherit;">Instagram</a>
                     </h2>
-                    <span class="contact-info">www.bohnestetica.cl</span>
+                    <span class="contact-info">bohn_clinicaestetica</span>
                 </div>
-            </div>
-            <div class="row">    
                 <div class="col">
                     <h2>
                         <i class="fa-brands fa-facebook"></i> <a href="http://Facebook.com/bohnclinicaestetica" target="_blank" style="text-decoration: none; color: inherit;">Facebook</a> 
                     </h2>
                     <span class="contact-info">bohnclinicaestetica</span>
                 </div>
+            </div>
+            <div class="row">    
                 <div class="col">
                     <h2>
-                        <i class="fa-brands fa-instagram"></i> <a href="https://www.instagram.com/bohn_clinicaestetica/" target="_blank" style="text-decoration: none; color: inherit;">Instagram</a>
+                        <i class="fa-solid fa-globe"></i> <a href="https://www.bohnestetica.cl/" target="_blank" style="text-decoration: none; color: inherit;">Página Web</a> 
                     </h2>
-                    <span class="contact-info">bohn_clinicaestetica</span>
+                    <span class="contact-info">www.bohnestetica.cl</span>
                 </div>
                 <div class="col">
                     <h2>
